<resources>
    <string name="app_name">Packager</string>
    <string name="sign_in">Sign In</string>
    <string name="please_enter_your_credentials">Please enter your credentials</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="register_new_user">Register new user</string>
    <string name="title_activity_package_list">PackageListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="weight">Weight</string>
    <string name="reward">Reward</string>
    <string name="reward_ft">Reward (Ft)</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="necessary_vehicle">Necessary vehicle</string>
    <string name="destination_emailaddress">Destination (EmailAddress)</string>
    <string name="height">Height</string>
    <string name="length">Length</string>
    <string name="height_cm">Height (cm)</string>
    <string name="width_cm">Width (cm)</string>
    <string name="length_cm">Length (cm)</string>
    <string name="basic_details">Basic details</string>
    <string name="more_details">More details</string>

    <string-array name="carrier_items">
        <item>Bike</item>
        <item>Car</item>
        <item>Trailer</item>
        <item>Truck</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_u">Name: </string>
    <string name="title_u">Account details</string>
    <string name="address_u">Address: </string>
    <string name="phone_u">Phone: </string>
    <string name="balance_u">Balance: </string>
    <string name="email_u">Email: </string>
    <string name="password_u">Password: </string>
    <string name="id_u">User identifier</string>
    <string name="title_activity_user_account">UserAccountActivity</string>
    <string name="add_money_to_balance">Add money to balance</string>
</resources>